--- a/RTCKinectComp_vc9.vcproj
+++ b/RTCKinectComp_vc9.vcproj
@@ -64,7 +64,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(rtm_libd) $(coil_libd) "
+				AdditionalDependencies="$(rtm_libd) $(coil_libd) avrt.lib"
 				OutputFile="$(OutDir)\RTCKinectComp.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(user_libdir)"
