--- a/RTCKinect_vc9.vcproj
+++ b/RTCKinect_vc9.vcproj
@@ -64,7 +64,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(rtm_libd) $(coil_libd)"
+				AdditionalDependencies="$(rtm_libd) $(coil_libd) avrt.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(user_libdir)"
 				GenerateDebugInformation="true"
